--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "^3.2.3",
     "csv-parse": "^5.0.4",
-    "fast-csv": "^4.3.6"
+    "fast-csv": "^4.3.6",
+    "moment": "^2.29.1"
   }
 }
